--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,4 @@
-@text-size:                   20px;
+@import 'variables.less';
 
-body {
-  font-size: @text-size;
-  display: flex;
-}
+@import 'global.less';
+@import 'blocks/page-header.less';
