--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -6,4 +6,5 @@
 
 @text-color:                  #000;
 
+@font-family:                 'Open Sans_my', sans-serif;
 @font-size:                   14px;
