--- a/src/_include/page-head.html
+++ b/src/_include/page-head.html
@@ -1,19 +1,33 @@
 <meta charset="UTF-8">
+
+<!--DEV Вставка JS, который будет качать шрифт при первом посещении домена -->
+<script>
+  @@include('../fonts/font_loading.js')
+</script>
+<!--DEV Вызываем функцию вставки CSS-файла со шрифтом -->
+<script>
+  loadFont(
+    'Open Sans_my',
+    '/css/font_opensans_woff.css?v=1',
+    '/css/font_opensans_woff2.css?v=1'
+  );
+</script>
+<!--DEV  Резервное подключение CSS-файла с WOFF шрифтом на случай отключенного JS -->
+<noscript><link rel="stylesheet" href="/css/font_opensans_woff.css"></noscript>
+
 <link rel="stylesheet" href="css/style.css">
 
-<!--DEV Такой комментарий не попадет в собранный HTML
-<meta name="viewport" content="width=1000">
--->
+<!--DEV <meta name="viewport" content="width=1000"> -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--DEV Такой комментарий не попадет в собранный HTML
+<!--DEV
 <script>
   // Маркер работающего javascript
   document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
 </script>
 -->
 
-<!--DEV Такой комментарий не попадет в собранный HTML
+<!--DEV
 <link href="/favicon.ico" rel="icon" type="image/x-icon">
 <link rel="icon" sizes="192x192" href="img/favicons/favicon-192x192.png">
 <link rel="apple-touch-icon-precomposed" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
