--- a/src/pug-layouts/layout.pug
+++ b/src/pug-layouts/layout.pug
@@ -1,3 +1,7 @@
+block config
+  - var myName = 'Nikolay'
+  - var myAge = 36
+
 doctype html
 html
   head
@@ -6,3 +10,6 @@ html
     block head
   body
     block content
+      h1 Некий заголовок
+
+    aside aside
