Добавил сшивку PNG-спрайтов

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,11 @@
 @import 'variables.less';
 
 @import 'global.less';
-@import 'blocks/page-header.less';
+@import 'sprite.less';
+// @import 'blocks/page-header.less';
+
+.sprites(@spritesheet-sprites);
+
+// .chrome {
+//   .sprite(@chrome);
+// }
